--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="icon" href="https://www.instagram.com/breeeakmix/" target="_blank">
                 <i class="fa-brands fa-square-instagram"></i>
             </a>
-            <a class="icon" href="https://mail.google.com/mail/?view=cm&fs=1&to=breeakmix@gmail.com&su=Consulta" target="_blank">
+            <a id="icon-mail" class="icon" target="_blank">
                 <i class="fa-solid fa-envelope"></i>
             </a>
         </div>
@@ -112,3 +112,10 @@
 </footer>
 </body>
 </html>
+
+<script>
+    const button_mail =document.getElementById("icon-mail");
+    button_mail.addEventListener("click", () =>{
+        window.open("https://mail.google.com/mail/?view=cm&fs=1&to=breeakmix@gmail.com&su=Consulta");
+    })
+</script>
