--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="en">
 <head>
     <title>Breakmix</title>
-    <link rel="icon" type="image/png" href="Media/icon.png">
+    <link rel="icon" type="image/png" href="Media/Logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="Estilos.css">
 </head>
 <body>
-    <header id="inicio">
+   <header id="inicio">
     <div class="container">
-        <a href="index.html" class="logo">BREAKMIX</a>
-        <nav>
-            <a href="#Quienes-Somos">¿Quienes Somos?</a>
-            <a href="#Preguntas">Preguntas Frecuentes</a>
-            <a href="#Descargas">Descargar</a> 
-        </nav>
-    </div>
+        <a href="index.html" class="logo">
+            <img src="Media/logo_png.png" alt="Logo Breakmix">
+            <span>BREAKMIX</span>
+        </a>
+    <nav>
+      <a href="#Quienes-Somos">¿Quienes Somos?</a>
+      <a href="#Preguntas">Preguntas Frecuentes</a>
+      <a href="#Descargas">Descargar</a>
+    </nav>
+  </div>
 </header>
 
 
@@ -81,23 +84,29 @@
 <section id="Descargas">
     <div class="container">
         <h2><span
-            class="color-acento">Descargar</span></h2>
+            class="color-acento">Descargas</span></h2>
         <div class="Operativo">
             <div class="carta">
-                <h3>Windowns</h3>
-               <a href="Media/Windowns.png" download="Windowns">
+                <h3>VST3</h3>
+               <a href="Media/Dawone.jpg" download="Dawone">
                 <button>Descarga</button>
                </a>
             </div>
             <div class="carta">
-                <h3>Mac</h3>
-               <a href="Media/Mac.webp" download="Mac">
+                <h3>AU plugin</h3>
+               <a href="Media/dawto.jpg" download="dawto">
                 <button>Descarga</button>
                </a>
             </div>
             <div class="carta">
-                <h3>Linux</h3>
-                <a href="Media/linux.webp" download="Linux">
+                <h3>Clap</h3>
+                <a href="Media/Dawtri.jpg" download="Dawtri">
+                <button>Descarga</button>
+               </a>
+            </div>
+              <div class="carta">
+                <h3>LV2</h3>
+                <a href="Media/dawfor.jpg" download="dawfor">
                 <button>Descarga</button>
                </a>
             </div>
