--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <header id="inicio">
     <div class="container">
         <a href="index.html" class="logo">
-            <img src="Media/logo_png.png" alt="Logo Breakmix">
+            <img src="Media/Logo_png.png" alt="Logo Breakmix">
             <span>BREAKMIX</span>
         </a>
     <nav>
