--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-pregunta">¿Con que DAW es compatible?</h3>
-                        <p class="faq-respuesta">Actualmente usamos la herramienta <a href="https://plugdata.org/" target="_blank">Plugdata</a> siendo compatible con variados daws, siempre que acepten VST3, LV2, CLAP y AU plugin</p>
+                        <p class="faq-respuesta">Actualmente usamos <a href="https://plugdata.org/" target="_blank">Plugdata</a> y <a href="https://juce.com/" target="_blank">JUCE</a> siendo compatible con variados daws, siempre que acepten VST3, LV2, CLAP y AU plugin</p>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-pregunta">¿En que fase esta?</h3>
@@ -88,7 +88,7 @@
         <div class="Operativo">
             <div class="carta">
                 <h3>VST3</h3>
-               <a href="Media/Dawone.jpg" download="Dawone">
+               <a href="Plugin/Break.zip" download="Breakmix_VST">
                 <button>Descarga</button>
                </a>
             </div>
