--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
         <div class="Operativo">
             <div class="carta">
                 <h3>VST3</h3>
-               <a href="Plugin/Break.zip" download="Breakmix_VST">
+               <a href="Plugin/BreakMIX.zip" download="Breakmix_VST">
                 <button>Descarga</button>
                </a>
             </div>
             <div class="carta">
-                <h3>AU plugin</h3>
+                <h3>AAX</h3>
                <a href="Media/dawto.jpg" download="dawto">
                 <button>Descarga</button>
                </a>
