--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <span>BREAKMIX</span>
         </a>
     <nav>
-      <a href="#Quienes-Somos">¿Quienes Somos?</a>
+      <a href="#Quienes-Somos">¿Quiénes Somos?</a>
       <a href="#Preguntas">Preguntas Frecuentes</a>
       <a href="#Descargas">Descargar</a>
     </nav>
@@ -24,7 +24,7 @@
 
 <section id="hero">
     <h1>Breakmix</h1>
-    <p class="subHero">Primer VST grautuito para la fatiga auditiva <br>Prueba la Beta abierta</p>
+    <p class="subHero">Primer VST gratuito para la fatiga auditiva <br>Prueba la Beta abierta</p>
     <form action="#Descargas">
         <button>Descargar</button>
     </form>
@@ -51,7 +51,7 @@
             
             <h2><span 
                 class="color-acento">¿Quienes Somos?</span></h2>
-            <p class="mensaje">Somos un grupo de tres estudiantes de la carrera Ingeniería en Sonido dedicados a desarrollar un plugin que aborde la fatiga auditiva de manera práctica y eficiente, con el objetivo de integrarlo al trabajo diario de cualquier productor audiovisual <br> principiante o profesional.</p>
+            <p class="mensaje">Somos un grupo de tres estudiantes de la carrera Ingeniería en Sonido dedicados a desarrollar un plug-in que aborde la fatiga auditiva de manera práctica y eficiente, con el objetivo de integrarlo al trabajo diario de cualquier productor audiovisual <br> principiante o profesional.</p>
         </div>
     </div>
 </section>
@@ -65,16 +65,16 @@
 
                 <div class="faq">
                     <div class="faq-item">
-                        <h3 class="faq-pregunta">¿Qué es este plugin?</h3>
+                        <h3 class="faq-pregunta">¿Qué es este plug-in?</h3>
                         <p class="faq-respuesta">Es una herramienta que busca detectar y reducir la fatiga auditiva durante la producción sonora o audiovisual.</p>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-pregunta">¿Con que DAW es compatible?</h3>
-                        <p class="faq-respuesta">Actualmente usamos <a href="https://plugdata.org/" target="_blank">Plugdata</a> y <a href="https://juce.com/" target="_blank">JUCE</a> siendo compatible con variados daws, siempre que acepten VST3, LV2, CLAP y AU plugin</p>
+                        <p class="faq-respuesta">Actualmente usamos <a href="https://plugdata.org/" target="_blank">Plugdata</a> y <a href="https://juce.com/" target="_blank">JUCE</a> siendo compatible con variados daws, siempre que acepten VST3, LV2, CLAP y AAX</p>
                     </div>
                     <div class="faq-item">
-                        <h3 class="faq-pregunta">¿En que fase esta?</h3>
-                        <p class="faq-respuesta">Actualmente, esta en desarrollo, en proceso de la beta</p>
+                        <h3 class="faq-pregunta">¿Es Seguro?</h3>
+                        <p class="faq-respuesta">Sí. Nuestro plug-in paso por la verificacion en <a href="https://www.virustotal.com/gui/home/upload" target="_blank">VirusTotal</a> sin problemas, te invitamos a probarlo si estimas necesario</p>
                 </div>
         </div>
     </div>
