--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-pregunta">¿Con que DAW es compatible?</h3>
-                        <p class="faq-respuesta">Actualmente usamos <a href="https://plugdata.org/" target="_blank">Plugdata</a> y <a href="https://juce.com/" target="_blank">JUCE</a> siendo compatible con variados daws, siempre que acepten VST3, LV2, CLAP y AAX</p>
+                        <p class="faq-respuesta">Actualmente usamos <a href="https://plugdata.org/" target="_blank">Plugdata</a> y <a href="https://juce.com/" target="_blank">JUCE</a> siendo compatible con variados daws, siempre que acepten VST3, LV2 y AU sean Win, Macos o Linux, en proceso de más formatos</p>
                     </div>
                     <div class="faq-item">
                         <h3 class="faq-pregunta">¿Es Seguro?</h3>
@@ -88,24 +88,24 @@
         <div class="Operativo">
             <div class="carta">
                 <h3>VST3</h3>
-               <a href="Plugin/BreakMIX.zip" download="Breakmix_VST">
+               <a href="Plugin/BreakmixVST.zip" download="Breakmix_VST">
                 <button>Descarga</button>
                </a>
             </div>
             <div class="carta">
-                <h3>AAX</h3>
-               <a href="Media/dawto.jpg" download="dawto">
+                <h3>VST3/MAC</h3>
+               <a href="Plugin/" download="dawto">
                 <button>Descarga</button>
                </a>
             </div>
             <div class="carta">
-                <h3>Clap</h3>
-                <a href="Media/Dawtri.jpg" download="Dawtri">
+                <h3>LV2</h3>
+                <a href="Plugin/Breakmix.lv2.zip" download="Breakmix_LV2">
                 <button>Descarga</button>
                </a>
             </div>
               <div class="carta">
-                <h3>LV2</h3>
+                <h3>AU/MAC</h3>
                 <a href="Media/dawfor.jpg" download="dawfor">
                 <button>Descarga</button>
                </a>
