--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
             </div>
             <div class="carta">
                 <h3>VST3/MAC</h3>
-               <a href="Plugin/" download="dawto">
+               <a href="PlugiN/BreakmixVSTMAC.zip" download="Breakmix_VSTMAC">
                 <button>Descarga</button>
                </a>
             </div>
             <div class="carta">
                 <h3>LV2</h3>
-                <a href="Plugin/Breakmix.lv2.zip" download="Breakmix_LV2">
+                <a href="Plugin/BreakmixLV2.zip" download="Breakmix_LV2">
                 <button>Descarga</button>
                </a>
             </div>
               <div class="carta">
                 <h3>AU/MAC</h3>
-                <a href="Media/dawfor.jpg" download="dawfor">
+                <a href="Plugin/BreakmixAU.zip" download="Breakmix_AU">
                 <button>Descarga</button>
                </a>
             </div>
