--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="carta">
                 <h3>VST3/MAC</h3>
-               <a href="PlugiN/BreakmixVSTMAC.zip" download="Breakmix_VSTMAC">
+               <a href="Plugin/BreakmixVSTMAC.zip" download="Breakmix_VSTMAC">
                 <button>Descarga</button>
                </a>
             </div>
