--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="carta">
                 <h3>VST3/MAC</h3>
-               <a href="Plugin/BreakmixVSTMAC.zip" download="Breakmix_VSTMAC">
+               <a href="https://drive.google.com/file/d/1gYReWTNd11rXAhRAYbifwN6E7pQaZ71G/view?usp=drive_link" download="Breakmix_VSTMAC">
                 <button>Descarga</button>
                </a>
             </div>
@@ -106,7 +106,7 @@
             </div>
               <div class="carta">
                 <h3>AU/MAC</h3>
-                <a href="Plugin/BreakmixAU.zip" download="Breakmix_AU">
+                <a href="https://drive.google.com/file/d/18WtB6lzHqS-hRp-JoQPDAjYwzLVGhHC1/view?usp=drive_link" download="Breakmix_AU">
                 <button>Descarga</button>
                </a>
             </div>
